# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py
page_analyzer/templates/: index.html  layout.html  main.html  url_details.html  urls.html
